# snx-staking-tg-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  env_example  init_db.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2dedd9e6fc8f_change_types.py  3daa2073abb5_init.py  cefd7af89e12_change_notif_cascade.py
app/: bootstrap.py  common.py  config.py  main.py  models.py
app/data_access/: __init__.py  repositories.py  unit_of_work.py
app/snx_staking/: __init__.py  account_manager.py  snx_data.py  snx_data_manager.py  staking_observer.py
app/snx_staking/synthetix/: __init__.py  _synthetix.py  addres_resolver_abi.py  constants.py  contract_caller.py  contract_manager.py  proxy_abi.py  utils.py
app/telegram_bot/: __init__.py  account_update_processor.py  commands.py  constants.py  dashboard.py  error_handler.py  handlers.py  message_composer.py  snx_bot_context.py  texts.py  utils.py
